CHANGES
=======

3.9.5 (unreleased)
------------------

- Fix a bug in zope.session.session.Session that would trigger an
  infinite loop if either iteration or a containment test were
  attempted on an instance.


3.9.4 (2011-03-07)
------------------

- Added an explicit `provides` to the IClientId adapter declaration in
  adapter.zcml.

- Added option to disable implicit sweeps in
  PersistentSessionDataContainer.


3.9.3 (2010-09-25)
------------------

- Added test extra to declare test dependency on ``zope.testing``.

- Using Python's ``doctest`` module instead of depreacted
  ``zope.testing.doctest``.


3.9.2 (2009-11-23)
------------------

- Fix Python 2.4 hmac compatibility issue by only using hashlib in
  Python versions 2.5 and above.

- Use the CookieClientIdManager's secret as the hmac key instead of the
  message when constructing and verifying client ids.

- Make it possible to construct CookieClientIdManager passing cookie namespace
  and/or secret as constructor's arguments.

- Use zope.schema.fieldproperty.FieldProperty for "namespace" attribute of
  CookieClientIdManager, just like for other attributes in its interface.
  Also, make ICookieClientIdManager's "namespace" field an ASCIILine, so
  it accepts only non-unicode strings for cookie names.


3.9.1 (2009-04-20)
------------------

- Restore compatibility with Python 2.4.


3.9.0 (2009-03-19)
------------------

- Don't raise deprecation warnings on Python 2.6.

- Drop dependency on ``zope.annotation``. Instead, we make classes implement
  `IAttributeAnnotatable` in ZCML configuration, only if ``zope.annotation``
  is available. If your code relies on annotatable `CookieClientIdManager`
  and `PersistentSessionDataContainer` and you don't include the zcml classes
  configuration of this package, you'll need to use `classImplements` function
  from ``zope.interface`` to make those classes implement `IAttributeAnnotatable`
  again.
