@@ -4,6 +4,8 @@ CHANGES
 3.9.5 (unreleased)
 ------------------
 
+- LP #824355:  enable support for HttpOnly cookies.
+
 - Fix a bug in zope.session.session.Session that would trigger an
   infinite loop if either iteration or a containment test were
   attempted on an instance.
